test/good/functions/lambda23.px

f = lambda x def
    print x
    return

f('x')
