test/bad/functions/lambda14.px

f = lambda x def
    if true do
        return x
    return

f(true)
